--- a/NgMyBroker/package.json
+++ b/NgMyBroker/package.json
@@ -13,28 +13,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.11",
-    "@angular/common": "^5.2.11",
-    "@angular/compiler": "^5.2.11",
-    "@angular/core": "^5.2.11",
-    "@angular/forms": "^5.2.11",
-    "@angular/http": "^5.2.11",
-    "@angular/platform-browser": "^5.2.11",
-    "@angular/platform-browser-dynamic": "^5.2.11",
-    "@angular/router": "^5.2.11",
+    "@angular/animations": "^7.1.0",
+    "@angular/common": "^7.1.0",
+    "@angular/compiler": "^7.1.0",
+    "@angular/core": "^7.1.0",
+    "@angular/forms": "^7.1.0",
+    "@angular/http": "^7.1.0",
+    "@angular/platform-browser": "^7.1.0",
+    "@angular/platform-browser-dynamic": "^7.1.0",
+    "@angular/router": "^7.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "core-js": "^2.5.7",
     "e2e": "0.0.8",
-    "materialize-css": "^0.100.2",
-    "rxjs": "^5.5.12",
+    "jquery": "^3.3.1",
+    "materialize-css": "^1.0.0",
+    "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.1",
-    "@angular/compiler-cli": "^5.2.11",
-    "@angular/language-service": "^5.2.11",
+    "@angular-devkit/build-angular": "~0.10.0",
+    "@angular/cli": "7.0.6",
+    "@angular/compiler-cli": "^7.1.0",
+    "@angular/language-service": "^7.1.0",
     "codelyzer": "^4.5.0",
     "tslint": "^5.11.0",
-    "typescript": "~2.4.2"
+    "typescript": "~3.1.6"
   }
 }
